# carTrainerSystem

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  main.cpp
src/core/: Manager.cpp  Manager.h  Schedule.cpp  Schedule.h  Student.cpp  Student.h  TimeUtils.cpp  TimeUtils.h  Vehicle.cpp  Vehicle.h
src/db/: Database.cpp  Database.h
src/ui/: AppWindow.cpp  AppWindow.h
test/: CMakeLists.txt  test_core.cpp
